--- a/index.html
+++ b/index.html
@@ -30,7 +30,26 @@
 
 </table>
 <img src="anh1.jpg" alt="trulli" width="500"height="300">
+<h2>Đây là sản phẩm đã được đặt hàng </h2>
+<ul>
+    <li>Cà phê</li>
+    <li>nước cam</li>
+    <li>Sữa</li>
+</ul>
+<h2>Đây là sản phẩm còn ở cửa hàng</h2>
+<ol>
+    <li>Bò húc</li>
+    <li>Nước khoáng</li>
+    <li>bánh kẹo</li>
+</ol>
+
+
+
     </body>
+
+
+
+
 
 
 
