--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </tr>
 
 </table>
-<img src="anh1.jpg" alt="trulli" width="500"height="300">
+<center><img src="anh2.jpg" alt="trulli" width="500"height="300"></center>
 <h2>Đây là sản phẩm đã được đặt hàng </h2>
 <ul>
     <li>Cà phê</li>
