--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <head>
         <title>Trang bán hàng </title>
     </head>
-    <body>
-<h1 style="color:brown;"> Mặt Hàng Cần Bán</h1>
-<p style="color: darkblue;"> Sản phẩm vừa rẻ vừa chất lượng</p>
+    <body> 
+           
+      <center><h1 style="color:brown;"> Cửa Hàng Tiện Lợi</h1></center>
+<p style="color: darkblue;"><b> Sản Phẩm Vừa Rẻ Vừa Chất ượng</b></p>
 <table border="50">
     <tr>
         <th>Sản Phẩm</th>
@@ -42,6 +43,7 @@
     <li>Nước khoáng</li>
     <li>bánh kẹo</li>
 </ol>
+<p>bán mọi sản phẩm</p>
 
 
 
