--- a/index.html
+++ b/index.html
@@ -27,20 +27,7 @@
 <td>5000</td>
 
     </tr>
-
-
-
-
-
-
 </table>
+<h3>Hãy trao niềm tin cho chúng tôi </h3>
     </body>
-
-
-
-
-
-
-
-
 </html>
