--- a/index.html
+++ b/index.html
@@ -41,14 +41,10 @@
 <ol>
     <li>Bò húc</li>
     <li>Nước khoáng</li>
-    <li>bánh kẹo</li>
+    <li>bánh kẹo moi</li>
 </ol>
-<p>bán mọi sản phẩm co san</p>
 
-
-
-    </body>
-
+  </body>
 
 
 
