--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
     <head>
         <title>Trang bán hàng </title>
     </head>
-    <body>
-<h1 style="color:brown;"> Mặt Hàng Cần Bán</h1>
-<p style="color: darkblue;"> Sản phẩm vừa rẻ vừa chất lượng</p>
+    <body> 
+           
+      <center><h1 style="color:brown;"> Cửa Hàng Tiện Lợi</h1></center>
+<p style="color: darkblue;"><b> Sản Phẩm Vừa Rẻ Vừa Chất ượng</b></p>
 <table border="50">
     <tr>
         <th>Sản Phẩm</th>
@@ -28,13 +29,25 @@
 
     </tr>
 
-
-
-
-
-
 </table>
-    </body>
+<center><img src="anh2.jpg" alt="trulli" width="500"height="300"></center>
+<h2>Đây là sản phẩm đã được đặt hàng </h2>
+<ul>
+    <li>Cà phê</li>
+    <li>nước cam</li>
+    <li>Sữa</li>
+</ul>
+<h2>Đây là sản phẩm còn ở cửa hàng</h2>
+<ol>
+    <li>Bò húc</li>
+    <li>Nước khoáng</li>
+    <li>bánh kẹo cu</li>
+</ol>
+
+  </body>
+
+
+
 
 
 
